# a3presentation

./: .gitignore  .graphifyignore  A3_Strategy_2026_review_extracted.txt  AGENTS.md  Dockerfile  README.md  docker-compose.server.yml  pyproject.toml  vercel.json
.codex/: hooks.json
.github/workflows/: ci.yml
deploy/nginx/: app.conf
docs/: analysis_rule.md  assistant_response_rule.md  document_class_matrix.md  frontend-visual-contracts.md  new-tooling-rules.md  project_onepager.md  project_overview.md  project_overview_business.md  quality-contracts.md  railway-deploy.md  release-gate-roadmap.md  slide-review-implementation-plan.md  slide-review-render-contract.md  system_backlog.md  template_mappings.md  timeweb-server-deploy.md  user-template-roadmap-cjm.md  working-version-roadmap.md  worklog-2026-04-09.md
examples/: sample_presentation_plan.json  sample_template_manifest.json
frontend/: Dockerfile  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: app.spec.ts  chart-preview.spec.ts  runtime-chart.spec.ts
frontend/src/: App.tsx  api.ts  chart-style.json  index.css  types.ts
scripts/: deploy_server.sh  dev-backend.ps1  dev-frontend.ps1  dev.ps1  graphify.ps1  release-gate.ps1  run_quality_contracts.py
scripts/obsidian-mcp/: package.json
storage/: README.md
tests/: test_api.py  test_document_extractor.py  test_end_to_end_docx.py  test_planner.py  test_project_contracts.py  test_quality_contracts.py  test_regression_corpus.py  test_semantic_pipeline.py  test_table_chart_analyzer.py
(+39 files in other folders)
